add _pages and bio photo

--- a/_config.yml
+++ b/_config.yml
@@ -108,9 +108,9 @@ analytics:
 # Site Author
 author:
   name             : "Sameera Suhail"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : ""
-  location         : "Melbourne"
+  avatar           : "/images/Sameera photo bio.jpg"
+  bio              : "Data Science Portfolio"
+  location         : "Melbourne, VIC"
   email            :
   links:
     - label: "Email"
@@ -127,7 +127,7 @@ author:
       # url: "https://facebook.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url: "https://github.com/"
+      url: "https://github.com/SameeraSuhail1"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
@@ -292,3 +292,11 @@ defaults:
       comments: # true
       share: true
       related: true
+
+  #_pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
