fix bio photo name

--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ analytics:
 # Site Author
 author:
   name             : "Sameera Suhail"
-  avatar           : "/images/Sameera photo bio.jpg"
+  avatar           : "/images/Sameera-photo-bio.jpg"
   bio              : "Data Science Portfolio"
   location         : "Melbourne, VIC"
   email            :
